# kybe-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: kyber-bench.rs
examples/: kem1024.rs  kem512.rs  kem768.rs  pke1024.rs  pke512.rs  pke768.rs
src/: bytearray.rs  compress.rs  encode.rs  hash.rs  lib.rs  matrix.rs  ntt.rs  params.rs  primefield.rs  utils.rs  vector.rs
src/functions/: compress.rs  encode.rs  hash.rs  mod.rs  ntt.rs  utils.rs
src/kem/: mod.rs
src/pke/: mod.rs
src/polyvec/: ff.rs  matrix.rs  mod.rs  polynom.rs  polynomial.rs  polyvec.rs  structures.rs  vector.rs
src/structures/: bytearray.rs  mod.rs  primefield.rs
src/structures/algebraics/: matrix.rs  mod.rs  polynomial.rs  polyvec.rs
tests/: PQCkemKAT_1632.ron  PQCkemKAT_2400.ron  PQCkemKAT_3168.ron  integration_test.rs  kat.rs
