[package]
name = "kybe-rs"
version = "0.1.0"
authors =  ["Stanislas Plessia <stplessia@gmail.com>", "Remi Geraud-Stewart"]
edition = "2018"
description = "Implementation of the key encapsulation mechanism (KEM) and public-key encryption (PKE) schemes of CRYSTALS-KYBER"
license = "MIT"
readme = "README.md"
keywords = ["crypto", "lattice", "kyber", "pke", "kem"]
categories = ["cryptography", "science"]
repository = "https://github.com/rust-crypto-labs/kybe-rs"

[dependencies]
sha3 = "0.8.0"
digest = "0.9.0"
rand = "0.7.3"

[dev-dependencies]
criterion = "0.3"
flamegraph = "0.4"
ron = "0.6"
serde = "1.0"
hex = "0.4"

[profile.release]
opt-level = 3
debug = false
lto = true

[[bench]]
name = "kyber-bench"
harness = false